test/Fail/Issue4631AsPatternShadowsConstructor.err
Issue4631AsPatternShadowsConstructor.agda:8.6-10: warning: -W[no]AsPatternShadowsConstructorOrPatternSynonym
Name bound in @-pattern ignored because it shadows a constructor
when scope checking the left-hand side test true@_ in the
definition of test

Issue4631AsPatternShadowsConstructor.agda:8.15-19: error: [UnequalTerms]
Bool !=< Set
when checking that the expression true has type Set
